@@ -1,3 +1,15 @@
+2004-09-22  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* menubar-items.el (save-options-file):
+	(save-options-init-file):
+	(options-save-faces):
+	Remove obsolete and unused variables.
+
+2004-09-22  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* menubar-items.el (init-menubar-at-startup):
+	XEmacs loads "init files", not ".emacs".
+
 2004-11-07  Malcolm Purvis  <malcolmp@xemacs.org>
 
 	* about.el (about-personal-info): Added my personal details.
